--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -267,6 +267,7 @@ span.icon-xlg {
     .routes {
         margin-top: 52px;
         padding: 10px;
+        background-color: white;
     }
 }
 
